fix the alignment of curve and circle

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,6 +5,7 @@
     transform: translateY(-25%);
     text-align: left;
     color: white;
+    z-index: 2;
   }
   
   .hero-content h1 {
@@ -12,6 +13,7 @@
     padding: 0;
     font-size: 5rem;
     font-weight: bold;
+    max-width: 50%;   
   }
   
   .hero-content h2 {
@@ -19,46 +21,15 @@
     font-size: 2.2rem;
     color: rgba(255, 255, 255, 0.8);
   }
-  
-  /* .animated-lines {
+
+  .curve-svg {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1; 
-    pointer-events: none;
+    z-index: 1;
   }
-  
-  .animated-lines::before {
-    content: '';
-    position: absolute;
-    top: 35%;
-    right: 30%;
-    width: 200px;
-    height: 200px;
-    border: 2px solid white; 
-    border-radius: 50%;
-  }
-  
-  .animated-lines::after {
-    content: '';
-    position: absolute;
-    top: -100%;
-    right: -30%;
-    width: 1500px;
-    height: 1500px;
-    border-top: 2px solid white;
-    border-radius: 50%;
-    transform: rotate(-140deg);
-  } */
-  .responsive-svg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-}
 
   .resume-button {
     margin-top: 20px;
@@ -81,10 +52,10 @@
     text-decoration: none;
 }
 
-@media (max-width: 991px) {
-  .resume-button {
-      transition: none; 
-  }
+  @media (max-width: 991px) {
+    .resume-button {
+        transition: none; 
+    }
 
   .resume-button:hover {
       width: 150px;               
@@ -95,8 +66,8 @@
   }
 }
 
-.resume-button:focus, .resume-button:active {
-  outline: none !important;
-  background-color: white !important;
-  color: black !important;
-}
+  .resume-button:focus, .resume-button:active {
+    outline: none !important;
+    background-color: white !important;
+    color: black !important;
+  }
